# wed_django_10

./: pyproject.toml
hw_project/: db.sqlite3  postgres
hw_project/hw_project/: settings.py
hw_project/quotes/: models.py  urls.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/templates/quotes/: base.html  index.html
hw_project/users/: forms.py  models.py  views.py
hw_project/users/migrations/: 0001_initial.py  0002_userprofile_remove_quote_author_remove_quote_tags_and_more.py
hw_project/users/templates/users/: login.html  signup.html
hw_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py
