[tool.poetry]
name = "wed-django-10"
version = "0.1.0"
description = ""
authors = ["Vasyl Radashev <vasiliyradashev24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
utils = "^1.0.2"
psycopg2-binary = "^2.9.9"
pymongo = "^4.8.0"
pillow = "^10.4.0"
django-allauth = "^0.63.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
